---------------------------------------------------------------------------------------------------
Version: 2.0.5
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 2025-10-07
  Changes:
    - Fixed LuaLS require error
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2025-10-07
  Changes:
    - More K2 compatibility fixes
    - Fixes to lasermill prototype definition
      - Images and fluidboxes
    - Fixed catalyst recipes using old catalyst definition
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2025-09-30
  Bugfixes:
    - Fixed crash when Krastorio2 container technology was disabled
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2025-09-30
  Bugfixes:
    - Fixed Fluids Must Flow & Flow Control incompatibility
    - Fixed conditional crash when tracker was enabled and and skyseeker wasn't?
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2025-09-29
  Changes:
    - Updated to 2.0.
      - Lots of fixes and migrations. See github for blames
      - Has been tested with and without K2 and SE
---------------------------------------------------------------------------------------------------
Version: 1.0.9
  Compatibility:
    - Corrected a reference to a removed icon for compatibility with Lunar Landings.

---------------------------------------------------------------------------------------------------
Version: 1.0.8
  Balancing:
    - (LL) CO2 lasers need oxygen and solid fuel, instead of an absurd-to-import-to-the-moon amount of petroleum gas.
    - (LL) Moon rock processing gives 2 -> 5 helium. Helium venting is unlocked when researching either method of getting helium.