@@ -6,9 +6,32 @@
   "homepage": "https://github.com/AtelierAmber/LasingAround-Updated",
   "description": "Updated for 2.0. Adds helium and laser-related intermediates, and a side-grade to assembling machines.",
   "factorio_version": "2.0",
-  "dependencies": ["base >= 2.0", "flib", "? BrassTacks-Updated", "? IfNickel-Updated", "? ThemTharHills-Updated", "? BrimStuff-Updated", "? bzgold", "? bzaluminum", "? bztin", "? bzsilicon", "? bzchlorine", 
-  "? space-exploration", "? aai-industry", "? aai-containers", "? aai-signal-transmission", "? deadlock-beltboxes-loaders", "? DeadlockCrating", "? vtk-deep-core-mining", 
-  "? Krastorio2", "? FluidMustFlow", "? FreightForwarding", "? bismuth", "? AbandonedRuins", "? icon-badges", "? LunarLandings"],
+  "dependencies": ["base >= 2.0",
+    "flib",
+    "? BrassTacks-Updated",
+    "? IfNickel-Updated",
+    "? ThemTharHills-Updated",
+    "? BrimStuff-Updated",
+    "? bzgold",
+    "? bzaluminum",
+    "? bztin",
+    "? bzsilicon",
+    "? bzchlorine",
+    "? space-exploration",
+    "? aai-industry",
+    "? aai-containers",
+    "? aai-signal-transmission",
+    "? deadlock-beltboxes-loaders",
+    "? DeadlockCrating",
+    "? vtk-deep-core-mining",
+    "? Krastorio2",
+    "? FluidMustFlow",
+    "? FreightForwarding",
+    "? bismuth",
+    "? AbandonedRuins",
+    "? icon-badges",
+    "? LunarLandings"
+  ],
   "package": {
     "git_publish_branch": "main",
     "ignore": [ "imgui.ini", "screenshots/*" ],
